--- a/post.html
+++ b/post.html
@@ -19,13 +19,8 @@
 				<li><a href="#">Jobs</a></li>
 			</ul>
 		</div>
-		<div id="myLinks">
-			<a href="/index.html">Home</a>
-			<a href="/news.html">News</a>
-			<a href="/jobs.html">Jobs</a>
-		</div>
 		<div class="search-icon">
-			<a href="#"><img src="./search.png" alt="Search"></a>
+			<a href="#"><img src="./image/search.png" alt="Search"></a>
 		</div>
 	</nav>
 	<main>
