--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</div>
 		<div class="nav-links">
 			<ul>
-				<li><a href="/website_layout.html">Home</a></li>
+				<li><a href="/index.html">Home</a></li>
 				<li><a href="#">News</a></li>
 				<li><a href="#">Jobs</a></li>
 			</ul>
@@ -28,7 +28,7 @@
 		<div class="left">
 			<section class="welcome">
 				<h2>Best of the Week</h2>
-				<a href="/blogGallery.html">See all our posts→</a>
+				<a href="blogGallery.html">See all our posts→</a>
 			</section>
 			<section class="blog" id="blog">
 				<div class="blog-content">
