--- a/blogGallery.html
+++ b/blogGallery.html
@@ -14,7 +14,7 @@
 		</div>
 		<div class="nav-links">
 			<ul>
-				<li><a href="/index.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="#">News</a></li>
 				<li><a href="#">Jobs</a></li>
 			</ul>
@@ -41,7 +41,7 @@
 						<p>10 tips for</p>
 						<p id="lastp">starting web dev</p>
 					</div>
-					<a href="/post.html">read more →</a>
+					<a href="post.html">read more →</a>
 				</div>
 			</section>
 			<section class="blog" id="blog-2">
@@ -57,7 +57,7 @@
 						<p>balancing life</p>
 						<p id="lastp">with programming</p>
 					</div>
-					<a href="/post.html">read more →</a>
+					<a href="post.html">read more →</a>
 				</div>
 			</section>
 			<section class="blog" id="blog-3">
@@ -73,7 +73,7 @@
 						<p>professional dev</p>
 						<p id="lastp">setup </p>
 					</div>
-					<a href="/post.html">read more →</a>
+					<a href="post.html">read more →</a>
 				</div>
 			</section>
 			<section class="blog" id="blog-4">
@@ -88,7 +88,7 @@
 						<p>Components of</p>
 						<p id="lastp">Motherboard</p>
 					</div>
-					<a href="/post.html">read more →</a>
+					<a href="post.html">read more →</a>
 				</div>
 			</section>
 		</div>
