--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</div>
 		<div class="nav-links">
 			<ul>
-				<li><a href="/index.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="#">News</a></li>
 				<li><a href="#">Jobs</a></li>
 			</ul>
@@ -42,7 +42,7 @@
 						<p>10 tips for</p>
 						<p id="lastp">starting web dev</p>
 					</div>
-					<a href="/post.html">read more →</a>
+					<a href="post.html">read more →</a>
 				</div>
 			</section>
 		</div>
