--- a/post.html
+++ b/post.html
@@ -14,7 +14,7 @@
 		</div>
 		<div class="nav-links">
 			<ul>
-				<li><a href="/index.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="#">News</a></li>
 				<li><a href="#">Jobs</a></li>
 			</ul>
