--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>BlogPost.</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="app.js"></script>
 </head>
