--- a/post.html
+++ b/post.html
@@ -21,7 +21,7 @@
 			</ul>
 		</div>
 		<div class="search-icon">
-			<a href="#"><img src="./image/search.png" alt="Search"></a>
+			<a href="#"><img src="./images/search.png" alt="Search"></a>
 		</div>
 	</nav>
 	<main>
